--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
             <h1 class="h1 text-center text-primary " id="xchoice">X-SLIDE</h1>
             <h3 class="h3 text-center " id="selectsize">SELECT SIZE</h3>
             <div class="row mx-0" id="top">
-                <button class="btn btn-primary btn-md col-3 mx-auto rounded-0 " id="size" onclick="choosesize(this,3)">Size 3*3</button>
-                <button class="btn btn-success btn-md col-3 mx-auto rounded-0" id="size" onclick="choosesize(this,4)">Size 4*4</button>
-                <button class="btn btn-warning btn-md col-3 mx-auto rounded-0" id="size" onclick="choosesize(this,5)">Size 5*5</button>
-                <button class="btn btn-danger btn-md col-3 mx-auto rounded-0" id="size" onclick="choosesize(this,6)">Size 6*6</button>
+                <button class="btn btn-primary btn-md col-3 mx-auto rounded-0 size" onclick="choosesize(this,3,0)">Size 3*3</button>
+                <button class="btn btn-success btn-md col-3 mx-auto rounded-0 size" onclick="choosesize(this,4,1)">Size 4*4</button>
+                <button class="btn btn-warning btn-md col-3 mx-auto rounded-0 size" onclick="choosesize(this,5,2)">Size 5*5</button>
+                <button class="btn btn-danger btn-md col-3 mx-auto rounded-0 size" onclick="choosesize(this,6,3)">Size 6*6</button>
             </div>
             <h3 class="h3 text-center text-primary " id="selectimage">SELECT IMAGE</h3>
-            <div id="picture" class="flex-column">          
-                <div class="mx-auto">
-                    <img src="" alt="" onclick="picture(this)" id="img1">
+            <div id="picture">          
+                <div class="d-flex flex-column justify-content-center mx-auto" id="img1">
+                    <button class="btn btn-md mb-2 mt-auto" onclick="picture()">Click me to select default image!</button>
+                    <form action="#">
+                        <label for="sl_image" class="btn btn-md w-100 mb-0">Click me to select your image!</label>
+                        <input type="file" name="sl_image" id="sl_image" class="d-none" onchange="Selectimg(event)">
+                    </form>
                 </div>
             </div>
             <div id="nexttop" class='justify-content-center align-items-center'>
