--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div id="cover"></div>
             </div>    
         </div>
-        <div id="bodymask" class="w-100 h-100"></div>
+        <div id="bodymask" class="w-100 h-100 bg-dark"></div>
     <script src='index.js'></script>
 </body>
 </html>
